updated homepage path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bhaveyaryaa.github.io/",
+  "homepage": "https://bhaveyaryaa.github.io/TextUtils-react/",
   "name": "textutils",
   "version": "0.1.0",
   "private": true,
